Applying multiple enhancements.
- Added support for Java 11 (including Docker images).
- Added ability to pass additional settings to Kafka.