@@ -19,7 +19,7 @@
     </developers>
     <properties>
         <protobufVersion>3.6.1</protobufVersion>
-        <kafkaVersion>2.1.0</kafkaVersion>
+        <kafkaVersion>2.1.1</kafkaVersion>
     </properties>
     <build>
         <extensions>
@@ -33,10 +33,33 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
+                <version>3.8.0</version>
                 <configuration>
+                    <release>11</release>
+                    <!--
                     <source>1.8</source>
                     <target>1.8</target>
+                    -->
+                </configuration>
+            </plugin>
+            <plugin> <!-- Required for Java 11 -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+                    <argLine>
+                    --illegal-access=permit
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin> <!-- Required for Java 11 -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+                   <argLine>
+                   --illegal-access=permit
+                   </argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -58,7 +81,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.1.0</version>
+                <version>3.1.1</version>
                 <configuration>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
@@ -83,7 +106,12 @@
         </plugins>
     </build>
     <dependencies>
-        <!-- Compile -->
+        <!-- Compile Dependencies -->
+        <dependency> <!-- Required for Java 11 -->
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
         <dependency>
             <groupId>info.picocli</groupId>
             <artifactId>picocli</artifactId>
@@ -107,9 +135,9 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
-            <version>2.11.0</version>
+            <version>2.11.2</version>
         </dependency>
-        <!-- Test -->
+        <!-- Test Dependencies -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
